<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.github.wifigratuitoc5.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.github.wifigratuitoc5.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <argument
            android:name="latitud"
            app:argType="string" />
        <argument
            android:name="longitud"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.github.wifigratuitoc5.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_navigation_map"
            app:destination="@id/navigation_map"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/navigation_about"
        android:name="com.github.wifigratuitoc5.ui.about.AboutFragment"
        android:label="@string/title_about_nav"
        tools:layout="@layout/fragment_about" />

</navigation>